--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "group-project-3",
+  "name": "drinkstagram",
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
