--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -4,8 +4,9 @@
   "theme_color": "#000000",
   "background_color": "#000000",
   "display": "standalone",
-  "scope": "/",
+  "prefer_related_applications ": "true",
   "start_url": "/",
+  "scope": "/",
   "icons": [
     {
       "src": "favicon.ico",
