--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,12 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "@apollo/client": "^3.3.7",
-    "@stripe/stripe-js": "^1.19.1",
+    "@stripe/react-stripe-js": "^1.6.0",
+    "@stripe/stripe-js": "^1.20.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.24.0",
     "bootstrap": "^4.4.1",
     "graphql": "^14.6.0",
     "jwt-decode": "^2.2.0",
