--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-plugin-import-graphql": "^2.8.1",
-    "concurrently": "^5.1.0",
-    "webpack-pwa-manifest": "^4.3.0"
+    "concurrently": "^5.1.0"
   },
   "dependencies": {
     "if-env": "^1.0.4",
